<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/add_task"
            android:background="@color/colorBlue"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/medium_text_size"
            android:gravity="center"
            android:textStyle="bold"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refresher"
        android:layout_width="0dp"
        android:layout_height="0dp"

        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="@dimen/small_margin">
                <LinearLayout
                    android:id="@+id/missedListContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorRed"
                        android:textSize="@dimen/normal_text_size"
                        android:text="@string/missed_tasks"
                        android:textStyle="bold"
                        android:layout_margin="@dimen/normal_margin"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/missedTasksRecycler"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/finishedListContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorSuccessGreen"
                        android:textSize="@dimen/normal_text_size"
                        android:text="@string/finished_tasks"
                        android:textStyle="bold"
                        android:layout_margin="@dimen/normal_margin"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/finishedTasksRecycler"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/activeListContainer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorBlue"
                        android:textSize="@dimen/normal_text_size"
                        android:text="@string/active_tasks"
                        android:textStyle="bold"
                        android:layout_margin="@dimen/normal_margin"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/activeTasksRecycler"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <ImageView
        android:id="@+id/addTask"
        android:layout_width="@dimen/back_button"
        android:layout_height="@dimen/back_button"

        android:src="@drawable/ic_add"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <LinearLayout
        android:id="@+id/taskChoiceContainer"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="horizontal"

        app:layout_constraintTop_toTopOf="@id/title"
        app:layout_constraintStart_toStartOf="@id/title"
        app:layout_constraintBottom_toBottomOf="@id/title">
        <TextView
            android:id="@+id/filteredTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/medium_text_size"
            android:textColor="@color/colorWhite"
            android:layout_gravity="center"
            android:textStyle="bold
"
            android:layout_marginStart="@dimen/normal_margin"
            android:text="@string/all_tasks"/>
        <ImageView
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:src="@drawable/ic_drop_down"
            android:layout_gravity="center"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>